--- a/app.yaml
+++ b/app.yaml
@@ -6,6 +6,8 @@ runtime: python38
 instance_class: F2
 
 handlers:
+- url: / static
+  static_dir: styles
 - url: /.*
   secure: always
   redirect_http_response_code: 301
